tests/agl/rejections/parse/named_arg_colon_call.agl
def f(a: int) -> int = a
print(f(a: 1))
